fixes #61 SimpleGen: Filters broken in 1.0.8 for CucumberJVM

--- a/core/chaintest-core-java/src/main/resources/com/aventstack/chaintest/generator/simple/chaintest-pkg.css
+++ b/core/chaintest-core-java/src/main/resources/com/aventstack/chaintest/generator/simple/chaintest-pkg.css
@@ -35,7 +35,7 @@
    background-color: #f8f9fa;
    white-space: pre-wrap;
    margin-bottom: 0;
-   height: 15rem;
+   max-height: 15rem;
    word-break: break-all;
    padding: 1rem;
    resize: vertical;
